--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.33",
     "@types/express": "^4.17.0",
-    "@types/node": "^11.13.17",
+    "@types/node": "^11.15.54",
     "ts-node-dev": "^1.0.0-pre.40",
     "tslint": "^5.18.0",
     "typescript": "^3.5.3"
@@ -30,7 +30,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "jimp": "^0.16.1",
-    "rimraf": "^3.0.2",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "rimraf": "^3.0.2"
   }
 }
